objects/sumoapp__OAuthConnector__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__AccessCode__c</fullName>
        <label>Access Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__AccessExpiresTime__c</fullName>
        <label>Access Expires Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__AccessToken__c</fullName>
        <label>Access Token</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ConnectorId__c</fullName>
        <externalId>true</externalId>
        <label>Connector Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sumoapp__License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SUMO License</label>
        <referenceTo>sumoapp__CalendarLicense__c</referenceTo>
        <relationshipLabel>OAuth Connectors</relationshipLabel>
        <relationshipName>OAuthConnectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__RefreshToken__c</fullName>
        <label>Refresh Token</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZOOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SUMO OAuth Connector</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>OAuth Connector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO OAuth Connectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>